# summa

./: .gitignore  Cargo.toml  Makefile  README.md
.matrix/: dendrite.yaml  test_account_data.csv  test_ssss_key
wallet/: Cargo.toml  README.md
wallet-cli/: Cargo.toml
wallet-cli/src/: main.rs
wallet/src/: lib.rs  main.rs  matrixconnector.rs
