[package]
name = "summa-wallet"
version = "0.1.0"
edition = "2018"

[dependencies]
libwallet = { version = "0.1.0", git = "https://github.com/virto-network/libwallet", default-features = false }
matrix-sdk = {version ="0.4.1"}
reqwest = { version = "0.11", features = ["json", "blocking"] }
bs58 = "0.4.0"
base64 = "0.13.0"
aes = "0.7.5"
ctr = "0.8.0"
sha2 = "0.10.0"
hmac = "0.12.0"
hkdf = "0.12.0"

[features]
std = [
	"libwallet/std"
]
